# homieflow

./: .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  README.md  default.toml  example.toml
.github/workflows/: ci.yml
config/: Cargo.toml
config/src/: lib.rs
debian-scripts/: homieflow.service
docs/: homie.md
server/: Cargo.toml
server/debian-scripts/: houseflow-server.service
server/src/: extractors.rs  homie.rs  lib.rs  main.rs
server/src/config/: mod.rs
server/src/config/server/: example.toml  mod.rs
server/src/fulfillment/: mod.rs  sync.rs
server/src/fulfillment/ghome/: execute.rs  homie.rs  query.rs  sync.rs
server/src/oauth/: authorize.rs  google_login.rs  mod.rs  token.rs
server/src/types/: client.rs  device.rs  mod.rs
server/src/types/errors/: mod.rs
src/: extractors.rs  homegraph.rs  homie.rs  json_prost.rs  lib.rs  main.rs  ratelimit.rs
src/config/: defaults.rs  mod.rs  server.rs
src/fulfillment/: execute.rs  homie.rs  mod.rs  query.rs  sync.rs
src/homie/: mod.rs  state.rs
src/oauth/: authorize.rs  google_login.rs  mod.rs  token.rs
src/types/: mod.rs  permission.rs  room.rs  structure.rs  token.rs  user.rs
src/types/errors/: auth.rs  internal.rs  mod.rs  oauth.rs  token.rs
templates/: authorize.html
types/: Cargo.toml
types/src/: lib.rs
types/src/errors/: auth.rs  mod.rs
