[package]
name = "homieflow"
version = "0.1.0"
description = "Google Home to Homie MQTT bridge."
repository = "https://github.com/qwandor/homieflow"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
categories = ["network-programming"]
keywords = ["iot", "home-automation", "smart-home", "web"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

[dependencies]
google-smart-home = "0.1.2"
askama = "0.11.0"
tokio = { version = "1.16", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
thiserror = "1.0.30"
serde = "1.0.133"
serde_json = "1.0.74"
async-trait = "0.1.50"
url = { version = "2.2.2", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.26"
axum = { version = "0.3.4", features = ["ws", "headers"] }
google-api-proto = { version = "1.64.0", features = ["google-home-graph-v1"] }
google-authz = { version = "1.0.0-alpha.5", features = ["tonic"] }
hex = "0.4.3"
http = "0.2.4"
hyper = "0.14.11"
headers = "0.3.4"
toml = "0.7.5"
tower-http = { version = "0.3.2", features = ["trace"] }
axum-server = { version = "0.3.2", features = ["tls-rustls"] }
homie-controller = "0.5.1"
jsonwebtoken-google = "0.1.2"
jsonwebtoken = "7.2.0"
prost-types = "0.11.9"
rand = "0.8.5"
regex = "1.5.5"
rumqttc = "0.10.0"
rustls = "0.19.1"
rustls-native-certs = "0.5.0"
semver = { version = "1.0.4", features = ["serde"] }
strum = { version = "0.23.0", features = ["derive"] }
tonic = { version = "0.7.1", features = ["tls", "tls-roots"] }
tracing-subscriber = "0.3.5"
uuid = { version = "0.8.2", features = ["serde"] }
xdg = "2.4.0"

[dev-dependencies]
tokio = { version = "1.16", features = [
    "sync",
    "time",
    "rt-multi-thread",
    "macros",
] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[package.metadata.deb]
section = "net"
maintainer-scripts = "debian-scripts"
conf-files = ["/etc/homieflow.toml"]
assets = [
	["target/release/homieflow", "usr/bin/", "755"],
	["example.toml", "etc/homieflow.toml", "640"],
	["README.md", "usr/share/doc/homieflow/", "644"],
]

# This section needs to be here even if it's empty, for the systemd integration to work.
[package.metadata.deb.systemd-units]
