[package]
name = "houseflow-server"
version = "0.1.2"
description = "Server for Houseflow"
homepage = "https://github.com/gbaranski/houseflow"
repository = "https://github.com/gbaranski/houseflow"
authors = ["Grzegorz Baranski <root@gbaranski.com>"]
keywords = ["iot", "home-automation", "smart-home", "web"]
license = "GPL-3.0-or-later"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
houseflow-types = { path = "../types", version = "0.1.1", features = [
    "askama",
    "axum",
    "token",
    "auth",
    "fulfillment",
    "lighthouse",
] }
houseflow-config = { path = "../config", version = "0.1.1", features = [
    "server",
    "fs",
] }
google-smart-home = { path = "../google-smart-home" }
askama = "0.10.5"
tokio = { version = "1.5", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.50"
url = { version = "2.2.2", features = ["serde"] }
chrono = "0.4.19"
tracing = "0.1.26"
axum = { version = "0.3.4", features = ["ws", "headers"] }
http = "0.2.4"
hyper = "0.14.11"
headers = "0.3.4"
tower-http = { version = "0.1.1", features = ["trace"] }
axum-server = { version = "0.3.2", features = ["tls-rustls"] }
homie-controller = "0.4.0"
jsonwebtoken-google = "0.1.2"
jsonwebtoken = "7.2.0"
rumqttc = "0.8.0"
rustls = "0.19.1"
rustls-native-certs = "0.5.0"

[dev-dependencies]
tokio = { version = "1.5", features = [
    "sync",
    "time",
    "rt-multi-thread",
    "macros",
] }
